force-app/main/default/objects/Event_Session__c/Event_Session__c.object-meta.xml
<CustomObject>
    <label>Event Session (1)</label>
    <nameField>
        <label>Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Sessions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>