force-app/main/default/objects/Event_Session__c/fields/Asset_URL__c.field-meta.xml
<CustomField>
    <fullName>Asset_URL__c</fullName>
    <label>Session Presentation URL</label>
    <type>Url</type>
</CustomField>