force-app/main/default/objects/Event_Session__c/fields/Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Name__c</fullName>
    <inlineHelpText
  >This is the name that gets displayed on the web</inlineHelpText>
    <label>Display Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>