force-app/main/default/objects/Event_Session__c/fields/Early_Bird_Fee__c.field-meta.xml
<CustomField>
    <fullName>Early_Bird_Fee__c</fullName>
    <label>Early Bird Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>