force-app/main/default/objects/Event_Session__c/fields/Hide_Time__c.field-meta.xml
<CustomField>
    <fullName>Hide_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >to hide the time on the agenda page. (used for concurrent sessions)</description>
    <inlineHelpText
  >to hide the time on the agenda page. (used for concurrent sessions)</inlineHelpText>
    <label>Hide Time (concurrent session)</label>
    <type>Checkbox</type>
</CustomField>