force-app/main/default/objects/Event_Session__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>Order of concurrent session  ( between 1 and 59)</description>
    <inlineHelpText
  >Order of concurrent session  ( between 1 and 59)</inlineHelpText>
    <label>Order (concurrent session)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>