force-app/main/default/objects/Event_Session__c/fields/Reg_Fee__c.field-meta.xml
<CustomField>
    <fullName>Reg_Fee__c</fullName>
    <label>Registration Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>