force-app/main/default/objects/Event_Session__c/fields/Reg_Open__c.field-meta.xml
<CustomField>
    <fullName>Reg_Open__c</fullName>
    <defaultValue>true</defaultValue>
    <description>People can register for this class</description>
    <label>Registration is Open</label>
    <type>Checkbox</type>
</CustomField>