force-app/main/default/objects/Event_Session__c/fields/Session_City__c.field-meta.xml
<CustomField>
    <fullName>Session_City__c</fullName>
    <description>The city in which the session is taking place.</description>
    <inlineHelpText
  >The city in which the session is taking place.</inlineHelpText>
    <label>Session City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>