force-app/main/default/objects/Event_Session__c/fields/Session_Code__c.field-meta.xml
<CustomField>
    <fullName>Session_Code__c</fullName>
    <label>Session Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>