force-app/main/default/objects/Event_Session__c/fields/Session_Details_Link__c.field-meta.xml
<CustomField>
    <fullName>Session_Details_Link__c</fullName>
    <description
  >This URL would link to a web page, Google doc, or hosted data on details for the session.</description>
    <inlineHelpText
  >This URL would link to a web page, Google doc, or hosted data on details for the session.</inlineHelpText>
    <label>Session Details Link</label>
    <type>Url</type>
</CustomField>