force-app/main/default/objects/Event_Session__c/fields/Session_Format__c.field-meta.xml
<CustomField>
    <fullName>Session_Format__c</fullName>
    <label>Session Format</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Case study with customer(s)</fullName>
            </value>
            <value>
                <fullName>Hands-on training</fullName>
            </value>
            <value>
                <fullName>Panel with customers</fullName>
            </value>
            <value>
                <fullName>Demo with customer(s)</fullName>
            </value>
            <value>
                <fullName>Presentation without customer(s)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>