force-app/main/default/objects/Event_Session__c/fields/Session_Rating__c.field-meta.xml
<CustomField>
    <fullName>Session_Rating__c</fullName>
    <label>Session Rating</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>