force-app/main/default/objects/Event_Session__c/fields/Session_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Session_Start_Time__c</fullName>
    <label>Session Start Time</label>
    <type>DateTime</type>
</CustomField>