force-app/main/default/objects/Event_Session__c/fields/Session_State__c.field-meta.xml
<CustomField>
    <fullName>Session_State__c</fullName>
    <description
  >The two letter abbreviation for the state in which the session is being held.</description>
    <inlineHelpText
  >The two letter abbreviation for the state in which the session is being held.</inlineHelpText>
    <label>Session State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>