force-app/main/default/objects/Event_Session__c/fields/Session_Street__c.field-meta.xml
<CustomField>
    <fullName>Session_Street__c</fullName>
    <description
  >The street address where the session is to take place.</description>
    <inlineHelpText
  >The street address where the session is to take place.</inlineHelpText>
    <label>Session Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>