force-app/main/default/objects/Event_Session__c/fields/Session_Take__c.field-meta.xml
<CustomField>
    <fullName>Session_Take__c</fullName>
    <label>Session Takeaways</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>