force-app/main/default/objects/Event_Session__c/fields/Session_Theme__c.field-meta.xml
<CustomField>
    <fullName>Session_Theme__c</fullName>
    <label>Session Theme</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Product Roadmap</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>AppExchange</fullName>
            </value>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>SSS</fullName>
            </value>
            <value>
                <fullName>PRM</fullName>
            </value>
            <value>
                <fullName>UE</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Core Needs</fullName>
            </value>
            <value>
                <fullName>Vertical</fullName>
            </value>
            <value>
                <fullName>New Release</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>