force-app/main/default/objects/Event_Session__c/fields/Session_Type__c.field-meta.xml
<CustomField>
    <fullName>Session_Type__c</fullName>
    <label>Session Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Session</fullName>
            </value>
            <value>
                <fullName>Keynote</fullName>
            </value>
            <value>
                <fullName>Class</fullName>
            </value>
            <value>
                <fullName>Cafe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>