force-app/main/default/objects/Event_Session__c/fields/Session_Venue__c.field-meta.xml
<CustomField>
    <fullName>Session_Venue__c</fullName>
    <description
  >This is the venue where the session is to be held.</description>
    <inlineHelpText
  >This is the venue where the session is to be held.</inlineHelpText>
    <label>Session Venue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>