force-app/main/default/objects/Event_Session__c/fields/Session_Zip__c.field-meta.xml
<CustomField>
    <fullName>Session_Zip__c</fullName>
    <description
  >This is the zip code where the session is being held.</description>
    <inlineHelpText
  >This is the zip code where the session is being held.</inlineHelpText>
    <label>Session Zip</label>
    <length>11</length>
    <type>Text</type>
</CustomField>