force-app/main/default/objects/Event_Session__c/fields/Sponsored__c.field-meta.xml
<CustomField>
    <fullName>Sponsored__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sponsored</label>
    <type>Checkbox</type>
</CustomField>