force-app/main/default/objects/Event_Session__c/fields/Teleconference_ID__c.field-meta.xml
<CustomField>
    <fullName>Teleconference_ID__c</fullName>
    <description
  >This is the teleconference meeting ID if applicable.</description>
    <inlineHelpText
  >This is the teleconference meeting ID if applicable.</inlineHelpText>
    <label>Teleconference ID</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>