force-app/main/default/objects/Event_Session__c/fields/Teleconference_Number__c.field-meta.xml
<CustomField>
    <fullName>Teleconference_Number__c</fullName>
    <description
  >The phone number for teleconference of the session if available.</description>
    <inlineHelpText
  >The phone number for teleconference of the session if available.</inlineHelpText>
    <label>Teleconference Number</label>
    <type>Phone</type>
</CustomField>