force-app/main/default/objects/Event_Session__c/fields/Teleconference_Passcode__c.field-meta.xml
<CustomField>
    <fullName>Teleconference_Passcode__c</fullName>
    <description
  >This is the passcode for the teleconference if applicable.</description>
    <inlineHelpText
  >This is the passcode for the teleconference if applicable.</inlineHelpText>
    <label>Teleconference Passcode</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>