force-app/main/default/objects/Event_Session__c/fields/Track__c.field-meta.xml
<CustomField>
    <fullName>Track__c</fullName>
    <label>Track</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Technology</fullName>
            </value>
            <value>
                <fullName>Project Management</fullName>
            </value>
            <value>
                <fullName>Contracting and Procurement</fullName>
            </value>
            <value>
                <fullName>Business Analysis</fullName>
            </value>
            <value>
                <fullName>Mobility</fullName>
            </value>
            <value>
                <fullName>Data</fullName>
            </value>
            <value>
                <fullName>Leadership</fullName>
            </value>
            <value>
                <fullName>Software/Technical Skills</fullName>
            </value>
            <value>
                <fullName>Technical</fullName>
            </value>
            <value>
                <fullName>Communication</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>