force-app/main/default/objects/Event_Session__c/fields/Venue_Phone__c.field-meta.xml
<CustomField>
    <fullName>Venue_Phone__c</fullName>
    <description
  >This is the main phone number that should be dialed if trying to coordinate on details at the venue.</description>
    <inlineHelpText
  >This is the main phone number that should be dialed if trying to coordinate on details at the venue.</inlineHelpText>
    <label>Venue Phone</label>
    <type>Phone</type>
</CustomField>