force-app/main/default/objects/Event_Session__c/fields/Webcast_Link__c.field-meta.xml
<CustomField>
    <fullName>Webcast_Link__c</fullName>
    <description
  >This the link to the webcast of the event if applicable.</description>
    <inlineHelpText
  >This the link to the webcast of the event if applicable.</inlineHelpText>
    <label>Webcast Link</label>
    <type>Url</type>
</CustomField>