force-app/main/default/objects/Event_Session__c/fields/Webcast_Password__c.field-meta.xml
<CustomField>
    <fullName>Webcast_Password__c</fullName>
    <description
  >This is the password for the webcast of the session if applicable.</description>
    <inlineHelpText
  >This is the password for the webcast of the session if applicable.</inlineHelpText>
    <label>Webcast Password</label>
    <length>40</length>
    <type>Text</type>
</CustomField>