force-app/main/default/objects/Event_Session__c/recordTypes/Advisory_Board.recordType-meta.xml
<RecordType>
    <fullName>Advisory_Board</fullName>
    <active>true</active>
    <description
  >This is a session of an advisory board that is supplemental, but related to an event.</description>
    <label>Advisory Board</label>
</RecordType>