force-app/main/default/objects/Event_Session__c/recordTypes/Event_Session.recordType-meta.xml
<RecordType>
    <fullName>Event_Session</fullName>
    <active>true</active>
    <description>Used when creating event sessions.</description>
    <label>Event Session</label>
</RecordType>