force-app/main/default/objects/Event_Session__c/listViews/All_Sessions_Ad_Boards.listView-meta.xml
<ListView>
    <fullName>All_Sessions_Ad_Boards</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:365</value>
    </filters>
    <label>All Sessions &amp; Ad Boards</label>
</ListView>